--- a/languages/en.json
+++ b/languages/en.json
@@ -1,3 +1,42 @@
 {
-    "MODULE.hello": "hello"
+    "combatbooster.settings.enableMarker.text":"Enable Turn Marker",
+    "combatbooster.settings.enableMarker.hint":"Enable a marker that will be displayed on the current combatant",
+    "combatbooster.settings.markerPath.name":"Turn Marker Image",
+    "combatbooster.settings.markerPath.hint":"Image to bee displayed as turn marker",
+    "combatbooster.settings.markerSpeed.text":"Turn Marker Rotation Speed",
+    "combatbooster.settings.markerSpeed.hint":"Rotation speed of the turn marker",
+    "combatbooster.settings.markerScale.text":"Turn Marker Scale",
+    "combatbooster.settings.markerScale.hint":"Scale multiplier for the turn marker",
+    "combatbooster.settings.markerAlpha.text":"Turn Marker Transparency",
+    "combatbooster.settings.markerAlpha.hint":"Transparency of the turn marker",
+    "combatbooster.settings.enableHud.text":"Enable Combat HUD (dnd5e only)",
+    "combatbooster.settings.enableHud.hint":"Display recent actions in the token hud",
+    "combatbooster.settings.hudRecent.text":"Recent Items",
+    "combatbooster.settings.hudRecent.hint":"How many recent items to display",
+    "combatbooster.settings.hudMaxCol.text":"Combat HUD Columns",
+    "combatbooster.settings.hudMaxCol.hint":"Maximum number of columns to display, set to 0 for auto",
+    "combatbooster.settings.markDefeated.text":"Mark Defeated",
+    "combatbooster.settings.markDefeated.hint":"Automatically mark an npc defeated when it reaches 0 hit points",
+    "combatbooster.settings.moveToPile.text":"Body Pile",
+    "combatbooster.settings.moveToPile.hint":"When an npc is defeated move it to the body pile. Top left corner by default - place a token named 'pile' anyware to pile the bodies there instead",
+    "combatbooster.settings.panCamera.text":"Pan Camera",
+    "combatbooster.settings.panCamera.hint":"Automatically pan camera to current combatant (GM only)",
+    "combatbooster.settings.controlToken.text":"Auto-Select Token On Turn Start",
+    "combatbooster.settings.controlToken.hint":"Automatically select a token when it's their turn",
+    "combatbooster.settings.renderTokenHUD.text":"Auto Enable HUD",
+    "combatbooster.settings.renderTokenHUD.hint":"Enable a token's hud when it's their turn (GM only)",
+    "combatbooster.settings.soundPath.name":"Your Turn Sound",
+    "combatbooster.settings.soundPath.hint":"Play this sound when it's a player's turn. Leave empty for no sound",
+    "combatbooster.settings.soundVolume.text":"Sound Volume",
+    "combatbooster.settings.soundVolume.hint":"Volume of the 'Your Turn' sound",
+    "combatbooster.settings.displayNotification.text":"Your Turn Notification",
+    "combatbooster.settings.displayNotification.hint":"Display a notification when it's a player's turn",
+    "combatbooster.settings.currentHp.text":"Current HP",
+    "combatbooster.settings.currentHp.hint":"Data path for an actor's current hp",
+    "combatbooster.settings.maxHp.text":"Max HP",
+    "combatbooster.settings.maxHp.hint":"Data path for an actor's max hp",
+    "combatbooster.settings.markerAbove.name":"Turn Marker Above",
+    "combatbooster.settings.markerAbove.hint":"Display turn marker above the token",
+
+    "combatbooster.yourTurn.text":"It's Your Turn!"
 }
