--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,8 @@
     "enhancedcombathud.itemconfig.sets.text":"Weapon Sets",
     "enhancedcombathud.itemconfig.set1p.text":"Set 1 (Primary)",
     "enhancedcombathud.itemconfig.set2p.text":"Set 2 (Primary)",
+    "enhancedcombathud.itemconfig.set3p.text":"Set 3 (Primary)",
     "enhancedcombathud.itemconfig.set1s.text": "Set 1 (Secondary)",
-    "enhancedcombathud.itemconfig.set2s.text": "Set 2 (Secondary)"
+    "enhancedcombathud.itemconfig.set2s.text": "Set 2 (Secondary)",
+    "enhancedcombathud.itemconfig.set3s.text": "Set 3 (Secondary)"
 }
