--- a/languages/en.json
+++ b/languages/en.json
@@ -69,13 +69,19 @@
     "enhancedcombathud.settings.color-end-turn.hint" : "Color of the end turn tab",
 
     "enhancedcombathud.settings.scale.name" : "Scale",
-    "enhancedcombathud.settings.scale.hint" : "HUD Scale",
+    "enhancedcombathud.settings.scale.hint" : "HUD Scale - if autoscale is enabled this setting will be used as a multiplier on top of the calculated scale",
+    "enhancedcombathud.settings.noAutoscale.name" : "Don't Autoscale",
+    "enhancedcombathud.settings.noAutoscale.hint" : "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead",
     "enhancedcombathud.settings.leftPos.name" : "Left Position",
     "enhancedcombathud.settings.leftPos.hint" : "Distance from the left border in pixels",
     "enhancedcombathud.settings.botPos.name" : "Bottom Position",
     "enhancedcombathud.settings.botPos.hint" : "Distance from the bottom border in pixels",
     "enhancedcombathud.settings.preparedSpells.name" : "Prepared Spells Only",
     "enhancedcombathud.settings.preparedSpells.hint" : "Show only prepared spells",
+    "enhancedcombathud.settings.showTooltips.name" : "Show Tooltips",
+    "enhancedcombathud.settings.showTooltips.hint" : "Show tooltips on hover",
+    "enhancedcombathud.settings.showTooltipsSpecial.name" : "Show Tooltips for Special Actions",
+    "enhancedcombathud.settings.showTooltipsSpecial.hint" : "Show tooltips on hover for special actions (dodge,disengage,shove...)",
 
     "enhancedcombathud.tooltip.target.name" : "Target",
     "enhancedcombathud.tooltip.range.name" : "Range",
