--- a/languages/en.json
+++ b/languages/en.json
@@ -10,7 +10,7 @@
 
     "enhancedcombathud.hud.mainactions.name": "Main Action",
     "enhancedcombathud.hud.castspell.name":"Cast Spell",
-    "enhancedcombathud.hud.usepower.name":"Use Power",
+    "enhancedcombathud.hud.usepower.name":"Use Feature",
     "enhancedcombathud.hud.useitem.name":"Use Item",
     "enhancedcombathud.hud.bonusaction.name":"Bonus",
     "enhancedcombathud.hud.reaction.name":"Reaction",
