--- a/languages/en.json
+++ b/languages/en.json
@@ -143,6 +143,8 @@
     "enhancedcombathud.settings.fadeoutOpacity.hint" : "Opacity of the HUD when faded out",
     "enhancedcombathud.settings.hideMacroPlayers.name" : "Hide Macro Bar and Player list",
     "enhancedcombathud.settings.hideMacroPlayers.hint" : "Hide Macro Bar and Player list while the HUD is opened",
+    "enhancedcombathud.settings.openCombatStart.name" : "Open on Combat Start",
+    "enhancedcombathud.settings.openCombatStart.hint" : "Open the HUD when a combat is started",
 
     "enhancedcombathud.tooltip.target.name" : "Target",
     "enhancedcombathud.tooltip.range.name" : "Range",
