Fixed misstype on spellcasting

--- a/languages/es.json
+++ b/languages/es.json
@@ -9,7 +9,7 @@
 
 
     "enhancedcombathud.hud.mainactions.name": "Acción Principal",
-    "enhancedcombathud.hud.castspell.name":"Lanzar Cconjuro",
+    "enhancedcombathud.hud.castspell.name":"Lanzar Conjuro",
     "enhancedcombathud.hud.usepower.name":"Usar Característica",
     "enhancedcombathud.hud.useitem.name":"Usar Objeto",
     "enhancedcombathud.hud.bonusaction.name":"Acción Adicional",
