Changed 2 strings for better looking

--- a/languages/es.json
+++ b/languages/es.json
@@ -10,9 +10,9 @@
 
     "enhancedcombathud.hud.mainactions.name": "Acción Principal",
     "enhancedcombathud.hud.castspell.name":"Lanzar Conjuro",
-    "enhancedcombathud.hud.usepower.name":"Usar Característica",
+    "enhancedcombathud.hud.usepower.name":"Capacidades",
     "enhancedcombathud.hud.useitem.name":"Usar Objeto",
-    "enhancedcombathud.hud.bonusaction.name":"Acción Adicional",
+    "enhancedcombathud.hud.bonusaction.name":"Acc. Adicional",
     "enhancedcombathud.hud.reaction.name":"Reacción",
     "enhancedcombathud.hud.specialaction.name":"Gratis",
     "enhancedcombathud.hud.pass.name":"Pasar",
