--- a/languages/en.json
+++ b/languages/en.json
@@ -149,6 +149,8 @@
     "enhancedcombathud.settings.tooltipScale.hint" : "Scale of the tooltips",
     "enhancedcombathud.settings.switchEquip.name" : "Auto Equip",
     "enhancedcombathud.settings.switchEquip.hint" : "Automatically equip/unequip items when switching sets",
+    "enhancedcombathud.settings.showWeaponsItems.name" : "Show Weapons in 'Use Item' Section",
+    "enhancedcombathud.settings.showWeaponsItems.hint" : "Show weapons in the 'Use Item' section. Usefull if your weapon slots are not enough",
 
     "enhancedcombathud.tooltip.target.name" : "Target",
     "enhancedcombathud.tooltip.range.name" : "Range",
