--- a/languages/en.json
+++ b/languages/en.json
@@ -69,20 +69,6 @@
     "enhancedcombathud.abilities.cha.tooltip": "<p>Charisma measures your ability to interact effectively with others. It includes such factors as confidence and eloquence, and it can represent a charming or commanding personality.</p><p><strong>Other Charisma Checks</strong><br/>The DM might call for a Charisma check when you try to accomplish tasks like the following:<ul><li>Find the best person to talk to for news, rumors, and gossip</li><li>Blend into a crowd to get the sense of key topics of conversation</li></ul></p>",
 
 
-    "enhancedcombathud.hud.spells.cantrip": "Cantrip",
-    "enhancedcombathud.hud.spells.pact": "Pact Magic",
-    "enhancedcombathud.hud.spells.will": "At Will",
-    "enhancedcombathud.hud.spells.innate": "Innate",
-    "enhancedcombathud.hud.spells.1": "1st Level",
-    "enhancedcombathud.hud.spells.2": "2nd Level",
-    "enhancedcombathud.hud.spells.3": "3rd Level",
-    "enhancedcombathud.hud.spells.4": "4th Level",
-    "enhancedcombathud.hud.spells.5": "5th Level",
-    "enhancedcombathud.hud.spells.6": "6th Level",
-    "enhancedcombathud.hud.spells.7": "7th Level",
-    "enhancedcombathud.hud.spells.8": "8th Level",
-    "enhancedcombathud.hud.spells.9": "9th Level",
-
     "enhancedcombathud.controls.toggle.title": "Toggle Argon Combat HUD",
     "enhancedcombathud.controls.toggle.warning" : "Argon Combat HUD: No token selected. Please select a token to enable the HUD",
 
@@ -232,6 +218,7 @@
     "enhancedcombathud.themeOptions.movementDashMovement" : "Background/Box Shadow of box indicating dash movement spaces",
     "enhancedcombathud.themeOptions.movementDangerMovement" : "Background/Box Shadow of box indicating exceeded movement spaces",
 
-    "enhancedcombathud.err.invalid": "Argon: Invalid Actor data or Actor Type not supported"
+    "enhancedcombathud.err.invalid": "Argon: Invalid Actor data or Actor Type not supported",
+    "enhancedcombathud.err.moduleNotActive": "Argon CORE: System specific module not installed or not active, please install and enable the %m module if available."
 
 }
