--- a/languages/en.json
+++ b/languages/en.json
@@ -31,8 +31,8 @@
 
     "enhancedcombathud.settings.scale.name" : "Scale",
     "enhancedcombathud.settings.scale.hint" : "HUD Scale - if autoscale is enabled this setting will be used as a multiplier on top of the calculated scale",
-    "enhancedcombathud.settings.noAutoscale.name" : "Don't Autoscale",
-    "enhancedcombathud.settings.noAutoscale.hint" : "Don't scale the HUD to fit the screen, use the flat value in the Scale setting instead",
+    "enhancedcombathud.settings.autoScale.name": "Auto Scale",
+    "enhancedcombathud.settings.autoScale.hint": "Automatically scale the HUD based on the screen size. Ignores the scale setting",
     "enhancedcombathud.settings.alwaysOn.name": "Always On",
     "enhancedcombathud.settings.alwaysOn.hint": "Automatically show the hud whenever you select a token",   
     "enhancedcombathud.settings.leftPos.name" : "Left Position",
